<resources>
    <string name="app_name">FitPal</string>
    <string name="backBtn">Back</string>
    <string name="notify">Notify</string>
    <string name="community">community</string>
    <string name="home">home</string>
    <string name="profile">profile</string>
    <string name="settings">settings</string>
    <string name="textHello">Hello world</string>


    <!--workout-->
    <!-- main -->
    <string name="app_workout_main">Workouts</string>
    <string name="workout_choose_a_workout">Choose a Workout</string>
    <string name="workout_add_your_own">Or Add your own</string>
    <string name="upper_body">Upper body</string>
    <string name="lower_body">Lower body</string>
    <string name="full_body">Full body</string>
    <string name="ab_workout">Ab workout</string>
    <string name="home_workout">Home Workout</string>
    <string name="cardio">Cardio</string>
    <string name="your_workouts">Your Workouts</string>

    <string name="add_btn">Add</string>

    <!-- default exercise -->
    <string name="exercise1">Bench press</string>
    <string name="exercise2">Dumbbell flies</string>
    <string name="exercise3">Decline bench press</string>
    <string name="exercise4">Incline bench press</string>
    <string name="sets">reps/sets 12*3</string>

    <!-- user workouts -->
    <string name="workout1">Chest workout</string>
    <string name="workout2">Leg workout</string>
    <string name="workout3">Upper body workout</string>

    <!-- Add workouts -->
    <string name="add_workouts">Add Your Workouts</string>
    <string name="add_workouts_description">Add your workouts and click add workout</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="exercise_repetition">Repetition</string>
    <string name="exercise_sets">Sets</string>
    <string name="add_workout_btn">Add Workout</string>
    <string name="finish_workout_btn">Finish</string>
    <string name="bench_press">Bench Press</string>
    <string name="repetition_hint">12</string>
    <string name="sets_hint">4</string>

    <!-- update exercises -->
    <string name="update_workouts">Update Workouts</string>
    <string name="title_update">Update Your Workout</string>
    <string name="update_btn">Update</string>


    <!--    forum-->
    <string name="replyBtn">Reply Button</string>
    <string name="answeredBtn">Answered Button</string>
    <string name="upvoteBtn">Upvote Button</string>

    <!--    forum-question-->
    <string name="forum_main">Forum</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="user_name">Sumudu Mendis</string>
    <string name="upload_time"> 13 hrs ago</string>
    <string name="user_question">How i do this? Stuck for 3 hours!! Help!!</string>
    <string name="question_description">I was trying to do a thing and wasn’t able to do one specific part of it. How to do???</string>
    <string name="reply_number">30</string>
    <string name="upvote_number">124</string>
    <string name="reply_hint">Write Your Answer</string>
    <string name="replies">Replies</string>
    <string name="best_answer"> Best Answer</string>

    <!--    forum main-->
    <string name="all">All</string>
    <string name="popular">Popular</string>
    <string name="my_questions">My Questions</string>

    <!--    forum add question-->
    <string name="ask_a_question">Ask a Question</string>
    <string name="ask_your_question">Ask Your Question</string>
    <string name="ask_question_description">Get your questions answered by a community of like-minded people</string>
    <string name="question_topic">Question</string>
    <string name="description_hint">Description</string>
    <string name="ask_question">Ask Question</string>

    <!--    forum my questions-->
    <string name="delete">Delete</string>

    <!--    first visit-->
    <string name="almost_done">You are almost done!</string>
    <string name="first_visit_topic_description">Fill in your details for a personalized experience</string>
    <string name="nick_name">Nick Name</string>
    <string name="name_hint">JhonD</string>
    <string name="birthday">Birthday</string>
    <string name="date_hint">2nd May 2017</string>
    <string name="gender_topic">Gender</string>
    <string name="gender_hint">Male</string>
    <string name="height_topic">Height</string>
    <string name="height_hint">162 cm</string>
    <string name="weight_hint">88 kg</string>
    <string name="weight_topic">Weight</string>
    <string name="confirm">Confirm</string>
    <string name="start_fitness_text">Sign in to start your fitness journey</string>

    <!-- Social Home -->
    <string name="latest_title">Latest</string>
    <string name="upload_photo_button">Upload Photo</string>
    <string name="create_post">Create Post</string>
    <string name="caption">Caption</string>
    <string name="comments">Comments</string>


    <!--    Diet Plan-->

    <!--Diet Planning-->

    <string name="diet_plan">Diet plan</string>
    <string name="diet_plan_2">Diet plan</string>
    <string name="start_your_diet_plan">Start your diet plan</string>
    <string name="start">Start</string>
    <string name="calculate_your_fat_percentage">Calculate Your Fat Percentage</string>

    <string name="get_an_idea_of_the_essential_and_stored_fat_in_your_body_and_see_where_your_dream_body_takes_you_to">
        Get an idea of the essential and stored fat in your body and see where your dream body takes you to
    </string>


    <string name="calculate">Calculate</string>
    <string name="meal_of_the_day">Meal of the day</string>
    <string name="meal_of_the_day_2">Meal of the day</string>
    <string name="day_range">Day 01/60</string>
    <string name="calorie_goal">Calorie Goal: 2000</string>
    <string name="next">Next</string>
    <string name="start_now">Start Now</string>

    <string name="profile_pic_title">Profile Pic</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_image">Add Image</string>
    <string name="add_a_profile_pic">Add a Profile Pic</string>
    <string name="delete_button">Delete Button</string>


    <string name="diet_plan_3">Diet Plan</string>
    <string name="select_your_diet_plan">Select Your Diet Plan</string>
    <string name="move_towards_your_target_weight_according_to_your_preferred_intensity">Move towards your target weight according to your preferred intensity.</string>
    <string name="current_weight">Current Weight</string>
    <string name="_140_kg">140 kg</string>
    <string name="target_weight">Target Weight</string>
    <string name="_60_kg">60 kg</string>
    <string name="intensity">Intensity</string>
    <string name="it_will_take">It will take</string>
    <string name="_60_days">60 Days</string>
    <string name="days">Days</string>
    <string name="_60">60</string>
    <string name="height1">Height</string>
    <string name="age1">Age</string>
    <string name="_150_cm">150 cm</string>
    <string name="_10">10</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="beginner">Beginner</string>
    <string name="moderate">Moderate</string>
    <string name="beast">Beast</string>
    <string name="your_current_weight_is">Your current weight is:</string>
    <string name="weight_70kg">Weight 70kg</string>
    <string name="date_01_01_2021">Date: 01/01/2021</string>
    <string name="diet_plan2">Diet Plan</string>
    <string name="add_your_weight">Add Your Weight</string>
    <string name="update_your_weight_and_track_your_progress">Update your weight and track your progress.</string>
    <string name="weight">Weight</string>
    <string name="_80kg">80kg</string>
    <string name="update">Update</string>
    <string name="weight_50kg">Weight 50kg</string>

    <string name="update_profile">Update Profile</string>
    <string name="update_your_profile">Update your profile</string>
    <string name="change_your_profile_pic_and_nickname_to_your_liking">Change your profile pic and nickname to your liking</string>
    <string name="your_name">Your Name</string>
    <string name="add_a_profile_picture">Add a profile picture2</string>
    <string name="add_a_profile_picture_to_show_in_the_social_platform_and_forum">Add a profile picture to show in the social platform and forum</string>
    <string name="add_a_profile_picture2">Add a profile picture</string>
    <string name="upload_image">Upload Image</string>
    <string name="forum2">Forum</string>

    <string name="todo">TODO</string>



</resources>