<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white">

    <!-- navigation bar -->
    <RelativeLayout
        android:id="@+id/upperAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="32dp"
        android:paddingVertical="20dp">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/backBtn"
            android:paddingTop="3dp"
            android:src="@drawable/back_button" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/your_workouts"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/notificationBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/notify"
            android:src="@drawable/notify_button" />

    </RelativeLayout>

    <!--content-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginVertical="6dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
        android:paddingVertical="16dp">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_workouts"
            android:textColor="@color/black"
            android:textSize="24sp"

            />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingTop="4dp"
            android:text="@string/add_workouts_description"
            android:textAlignment="center" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="4dp">

            <TextView
                android:id="@+id/exercise_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/exercise_name"
                android:textColor="@color/orange_dark" />

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/exercise_name"
                android:autofillHints="name"
                android:background="@drawable/input_field"
                android:hint="@string/bench_press"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                android:paddingVertical="4dp"
                android:textColorHint="@color/orange_light"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="4dp">

            <TextView
                android:id="@+id/repetition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/exercise_repetition"
                android:textColor="@color/orange_dark" />

            <EditText
                android:id="@+id/repetitionInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/repetition"
                android:autofillHints="number"
                android:background="@drawable/input_field"
                android:hint="@string/repetition_hint"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                android:paddingVertical="4dp"
                android:textColorHint="@color/orange_light"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="4dp">

            <TextView
                android:id="@+id/sets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/exercise_sets"
                android:textColor="@color/orange_dark" />

            <EditText
                android:id="@+id/setsInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/sets"
                android:autofillHints="number"
                android:background="@drawable/input_field"
                android:hint="@string/sets_hint"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                android:paddingVertical="4dp"
                android:textColorHint="@color/orange_light"
                android:textSize="12sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/add_workout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:padding="4dp"
            android:text="@string/add_workout_btn"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/finish_workout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:backgroundTint="@color/gray_light"
            android:text="@string/finish_workout_btn"
            android:textAllCaps="false" />

    </LinearLayout>

    <!-- Taskbar -->
    <LinearLayout
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/orange_medium"
        android:gravity="center_horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/community"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/community"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/community" />

            <ImageView
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/community"
                android:contentDescription="@string/home"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/home" />

            <ImageView
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/home"
                android:contentDescription="@string/profile"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/profile" />

            <ImageView
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/profile"
                android:contentDescription="@string/settings"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/settings" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>