<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white">

    <!-- navigation bar -->
    <RelativeLayout
        android:id="@+id/upperAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="32dp"
        android:paddingVertical="20dp">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/backBtn"
            android:paddingTop="3dp"
            android:src="@drawable/back_button" />

        <TextView
            android:id="@+id/navigation_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/diet_plan_3"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/notificationBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/notify"
            android:src="@drawable/notify_button" />

    </RelativeLayout>

    <!--content-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginVertical="6dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/title_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/select_your_diet_plan"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/addFoods_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingTop="4dp"
            android:text="@string/move_towards_your_target_weight_according_to_your_preferred_intensity"
            android:textAlignment="center" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="2dp">

            <TextView
                android:id="@+id/current_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/current_weight"
                android:textColor="@color/orange_dark" />

            <EditText
                android:id="@+id/current_weight_input"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_below="@+id/current_weight"
                android:autofillHints="number"
                android:background="@drawable/input_field"
                android:hint="@string/_140_kg"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                android:paddingVertical="4dp"
                android:textColorHint="@color/orange_light"
                android:textSize="12sp"
                tools:ignore="TextFields" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="2dp">

            <TextView
                android:id="@+id/target_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/target_weight"
                android:textColor="@color/orange_dark" />

            <EditText
                android:id="@+id/target_weight_input"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_below="@+id/target_weight"
                android:autofillHints="number"
                android:background="@drawable/input_field"
                android:hint="@string/_60_kg"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                android:paddingVertical="2dp"
                android:textColorHint="@color/orange_light"
                android:textSize="12sp"
                tools:ignore="TextFields" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="2dp">

            <TextView
                android:id="@+id/height1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/height1"
                android:textColor="@color/orange_dark" />

            <EditText
                android:id="@+id/height1_input"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_below="@+id/height1"
                android:autofillHints="number"
                android:background="@drawable/input_field"
                android:hint="@string/_150_cm"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                android:paddingVertical="4dp"
                android:textColorHint="@color/orange_light"
                android:textSize="12sp"
                tools:ignore="TextFields" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="4dp">

            <TextView
                android:id="@+id/age1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/age1"
                android:textColor="@color/orange_dark" />

            <EditText
                android:id="@+id/age1_input"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_below="@+id/age1"
                android:autofillHints="number"
                android:background="@drawable/input_field"
                android:hint="@string/_10"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                android:paddingVertical="4dp"
                android:textColorHint="@color/orange_light"
                android:textSize="12sp"
                tools:ignore="TextFields" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="4dp">

            <TextView
                android:id="@+id/gender1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/gender"
                android:textColor="@color/orange_dark" />

            <EditText
                android:id="@+id/gender1_input"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_below="@+id/gender1"
                android:autofillHints="number"
                android:background="@drawable/input_field"
                android:hint="@string/male"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                android:paddingVertical="4dp"
                android:textColorHint="@color/orange_light"
                android:textSize="12sp"
                tools:ignore="TextFields" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="2dp">

            <TextView
                android:id="@+id/intensity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/intensity"
                android:textColor="@color/orange_dark" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="2dp">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:orientation="horizontal"
                tools:ignore="UselessParent">


                <RadioButton
                    android:id="@+id/radio_beginner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/beginner"
                    android:textColor="@color/orange_dark"
                    android:textSize="15sp"/>

                <RadioButton
                    android:id="@+id/radio_moderate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/moderate"
                    android:textColor="@color/orange_dark"
                    android:textSize="15sp"/>

                <RadioButton
                    android:id="@+id/radio_beast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/beast"
                    android:textColor="@color/orange_dark"
                    android:textSize="15sp"/>

            </RadioGroup>



        </RelativeLayout>
        <Button
            android:id="@+id/start_diet_btn"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="4dp"
            android:text="@string/start_now"
            android:textAllCaps="false"
            android:enabled="false"/>

    </LinearLayout>

    <!-- Taskbar -->
    <LinearLayout
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/orange_medium"
        android:gravity="center_horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/community"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/community"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/community" />

            <ImageView
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/community"
                android:contentDescription="@string/home"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/home" />

            <ImageView
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/home"
                android:contentDescription="@string/profile"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/profile" />

            <ImageView
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/profile"
                android:contentDescription="@string/settings"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/settings" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>